# viking_macros

./: CHANGELOG.md  Cargo.toml  LICENCE  README.md
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: dependabot.yml  release.yaml
.github/workflows/: changelog.yaml  rust.yml
enum_display/: Cargo.toml  README.md
macros/enum/: Cargo.toml  README.md
macros/enum/src/: convert_string.rs  lib.rs
macros/enum/tests/: test_enum_display_macro.rs
src/: lib.rs  main.rs  traits.rs
