[package]
name = "viking_macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Helpful macros"
repository = "https://github.com/Ozy-Viking/viking_macros"
readme = "README.md"
keywords = ["macros", "enum"]
authors = ["Zack Hankin <admin@hankin.io>"]


[dependencies]
enum_display = {path = "enum_display", version="*"}
