[workspace]
members = ["macros/*", "../viking_macros"]
resolver = "3"

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "MIT"
description = "Helpful macros"
repository = "https://github.com/Ozy-Viking/viking_macros"
keywords = ["macros", "enum"]
authors = ["Zack Hankin <admin@hankin.io>"]

[package]
name = "viking_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
authors.workspace = true
exclude = ["src/main.rs"]


[dependencies]
viking_macros_enum = { version = "0", path = "macros/enum" }
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
convert_case.workspace = true

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.101", features = ["full", "extra-traits"] }
convert_case = { version = "0.8" }
