[package]
name = "enum_display"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "Helpful macros"
repository = "https://github.com/Ozy-Viking/viking_macros"
readme = "README.md"
keywords = ["macros", "enum"]
authors = ["Zack Hankin <admin@hankin.io>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.101", features = ["full", "extra-traits"] }
